Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119972

Clang-tidy reports possible memory leak with QMetaObject::invokeMethod

XMLWordPrintable

    • a337b8360 (dev), b0c031b51 (6.7), 6c43c86f6 (6.6), fc6420b71 (tqtc/lts-6.5)

      Hi.

      When using QMetaObject::invokeMethod, clang-tidy reports clang-analyzer-cplusplus.NewDeleteLeaks warning/errors.

        For Gerrit Dashboard: QTBUG-119972
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            gogo Gregor Kališnik
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: